--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header class="site-head" role="banner">
-  <div class="wrapper">
+  <div class="header_wrapper">
     <div class="site-head__inner">
       <a aria-label="rockyourcode - home" class="site-head__brand" href="/">
         <svg focusable="false" width="50" height="50" xmlns="http://www.w3.org/2000/svg" class="icon"
@@ -38,6 +38,6 @@
           </li>
         </ul>
       </nav>
-    </div>
   </div>
+</div>
 </header>
