--- a/assets/css/head.css
+++ b/assets/css/head.css
@@ -14,6 +14,7 @@
     --main-bg:#2e3440;
     --primary: #e5e9f0;
     --secondary:rgba(235, 203, 139, .95);
+    --tertiary: #c1c2c4;
     --flow-space: 1.77rem;
 }
 
@@ -133,14 +134,15 @@ body {
 
 
 .description {
-    color: #a2a6ac;
+    color: var(--tertiary);
     margin: 0;
     font-size:medium;
 }
 
 
-:selection {
+::selection {
     color: #e5e9f0;
+    background-color: var(--secondary);
 }
 
 ::-webkit-scrollbar {
@@ -163,10 +165,15 @@ body {
 }
 
 .site-foot {
+    border-top: 0.25rem dotted #88c0d0;
     font-size: smaller;
-    padding: 0 0 2.36rem;
+    padding: 0 1.33rem;
     text-align: right;
+    
+}
 
+#index-page{
+    border: none;
 }
 
 .site-head {
@@ -175,17 +182,22 @@ body {
 
 }
 
-.wrapper {
+.header_wrapper{
+    position: relative;
     max-width: 70rem;
     padding: 0 1.33rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wrapper {
+    max-width: 70rem;
+    padding: 2.66rem 1.33rem;
     margin-left: auto;
     margin-right: auto;
     position: relative;
 }
 
-.b_wrap {
-    padding-block: 2rem;
-}
 
 content{
     text-align: justify;
@@ -285,13 +297,11 @@ content{
 
 .panel {
     margin: 2.36rem 0;
-    padding: 2.36rem 0;
 }
 
 @media (min-width: 37em) {
     .panel {
 	margin: 3.15rem 0;
-	padding: 3.15rem 0;
     }
 }
 
