Fix Blog Format

--- a/layouts/blogs/single.html
+++ b/layouts/blogs/single.html
@@ -1,6 +1,6 @@
 {{- define "main" }}
 
-<div class=" site-head">
+<div class="wrapper">
     
     <h1 class="page-title headline">{{ .Title }}</h1>
         <div class="description">
