--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -12,9 +12,7 @@
   <ul class="grid-list">
     {{ range where .Pages.ByLastmod.Reverse "Params.completed" "!=" "true"   }}
         <li>
-          {{$temp:= .Title}}
-          {{ $img := (printf "/projects/img/%s.jpg" $temp ) }}
-          {{ partial "card" (dict "context" . "img" $img) }}
+          {{ partial "card" (dict "context" . "path" "img") }}
         </li>
     {{ end }} 
   </ul>
@@ -27,9 +25,7 @@
   <ul class="grid-list">
     {{ range where .Pages.ByLastmod.Reverse "Params.completed" true }}
         <li>
-          {{$temp:= .Title}}
-          {{ $img := (printf "/projects/img/%s.jpg" $temp ) }}
-          {{ partial "card" (dict "context" . "img" $img) }}
+          {{ partial "card" (dict "context" . "path" "img") }}
         </li>
     {{ end }} 
   </ul>
