--- a/assets/css/head.css
+++ b/assets/css/head.css
@@ -51,7 +51,7 @@ body {
     background: var(--main-bg);
 
     color: var(--primary);
-    font-size: 1.33rem;
+    font-size: 21px;
     font-family: "GT Walsheim Pro Medium Regular";
 }
 
@@ -457,6 +457,11 @@ h5{
     margin: 0;
     font-size: 1.25rem;
     font-family: epilogue;
+}
+
+
+h4{
+    margin: 0;
 }
 
 .card{
