--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,8 +17,9 @@
             <div class="[ page-header__summary ] measure-long">
               <p>
                 Hi there. I'm Arman, currently a Sophomore at IIITNR this blog is collection of my rants and 
-                programming works that i've done or will do in future.
+                programming works that i've done or will do in future. <br>
               </p>
+
             </div>
           </div>
         </div>
@@ -30,7 +31,11 @@
           </h2>
           <p>
             This site is mostly about my personal rant and some literature work i've read and some reviews as well
+
+
           </p>
+          <p style="margin: 0;">
+            If you are looking for my <a href="/CV.pdf">CV</a>
           </p>
           <p>
             You can find me elsewhere on
