--- a/assets/css/head.css
+++ b/assets/css/head.css
@@ -455,10 +455,12 @@ h5{
     font-family: epilogue;
 }
 
-code{
+code:not([class]){
     border-radius: 0.3rem;
     border-color: #ccc;
-    background-color:#bf616a;
+    padding: 0.2rem;
+    background-color:#6d6b6b;
+    font-size: 1rem;
 }
 
 .highlight-wrapper{
