--- a/layouts/blogs/list.html
+++ b/layouts/blogs/list.html
@@ -35,7 +35,7 @@
                 <a class="tag-button" href="{{ .Permalink }}">{{ .LinkTitle }}</a>
                 {{end}}
               </div>
-              <span style="font-size: medium;">{{ if isset .Params "description" }}{{ .Description }}{{ end }}</span>
+              <span>{{ if isset .Params "description" }}{{ .Description }}{{ end }}</span>
             </article>
           </div>
         </div>
