--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="icon" id="favicon" type="image/png" sizes="32x32" href="/loonix.svg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" id="favicon2" type="image/png" sizes="16x16" href="/loonix.svg">
     <script>
         let faviconElem = document.getElementById('favicon');
