--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="site-head" role="banner">
   <div class="header_wrapper">
     <div class="site-head__inner">
-      <a aria-label="rockyourcode - home" class="site-head__brand" href="/">
+      <a class="site-head__brand" href="/">
         <svg focusable="false" width="50" height="50" xmlns="http://www.w3.org/2000/svg" class="icon"
           viewBox="0 0 1024 1024">
           <path fill=" #e5e9f0 "
@@ -9,7 +9,12 @@
           </path>
         </svg>
       </a>
-      <nav aria-label="Primary" class="[ nav ] site-head__nav font-sans">
+      <nav class="[ nav ] site-head__nav font-sans">
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
         <ul class="nav__list">
           <li>
             <a href="/blogs/">
