--- a/layouts/partials/card.html
+++ b/layouts/partials/card.html
@@ -15,6 +15,11 @@
                     <div class="tag-button">{{ . }}</div>
                     {{ end }}
                 </div>
+
+                {{ $comp := .context.Params.read }}
+                {{ with $comp }}
+                <div class="meter"><span style="width: {{ . }}%"></span></div>
+                {{ end }}
                 
         </section>
     </a>
