--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
               About</h1>
             <div class="[ page-header__summary ] measure-long">
               <p>
-                Hi there. I'm Arman, currently a Sophomore at IIITNR this blog is collection of my rants and 
+                Hi there. I'm Arman, currently a junior at IIITNR this blog is collection of my rants and 
                 programming works that i've done or will do in future. <br>
               </p>
 
